<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="accounts">Accounts</string>
    <string name="blotter">Blotter</string>
    <string name="currencies">Currencies</string>
    <string name="categories">Categories</string>
    <string name="budgets">Budgets</string>
    <string name="projects">Projects</string>
    <string name="ok">OK</string>
    <string name="reset">Reset</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="edit_account">Edit Account</string>
    <string name="add_account">Add account</string>
    <string name="title">Title</string>
    <string name="payee">Payee</string>
    <string name="currency">Currency</string>
    <string name="sort_locations">Sort locations</string>
    <string name="sort_locations_summary">Define sort order for locations list</string>
    <string name="sort_templates">Sort templates</string>
    <string name="sort_templates_summary">Define sort order for templates list</string>
    <string name="templates_as_tab">Templates tab</string>
    <string name="templates_as_tab_summary">Show templates as a tab of their own. Turn off to keep the button on the transactions screen instead</string>
    <string name="show_budgets_tab">Budgets tab</string>
    <string name="show_budgets_tab_summary">Show the budgets tab in the main screen</string>
    <string name="show_reports_tab">Reports tab</string>
    <string name="show_reports_tab_summary">Show the reports tab in the main screen</string>
    <string name="transaction_screen">New transaction screen</string>
    <string name="transaction_screen_summary">Preferences for new transaction/transfer screen</string>
    <string name="screen_layout">Screen layout</string>
    <string name="shortcut_new_transaction">\'New Transaction\' shortcut</string>
    <string name="shortcut_new_transfer">\'New Transfer\' shortcut</string>
    <string name="shortcut_summary">Add the shortcut to the Home Screen</string>
    <string name="show_account_balance_on_selector">Show account balance</string>
    <string name="show_account_balance_on_selector_summary">Show account balance on account selector</string>
    <string name="gdocs_backup">Google Drive Backup</string>
    <string name="backup_folder">Backup Folder</string>
    <string name="backup_folder_summary">To store backup files create a new folder in My Drive</string>
    <string name="enable_widget">Enable widget</string>
    <string name="enable_widget_summary">Show account total on the widget</string>
    <string name="treat_transfer_to_ccard_as_payment">Treat Transfer to Credit Card as Bill Payment</string>
    <string name="treat_transfer_to_ccard_as_payment_summary">Do not deduce transfered amount from bill cycle</string>
    <string name="ui_language">Locale</string>
    <string name="ui_language_summary">Set language of user interface (requires restart!)</string>
    <string name="restore_missed_scheduled_transactions">Restore missed schedules</string>
    <string name="restore_missed_scheduled_transactions_summary">Missed scheduled transactions will be restored with \'Restored\' status</string>
    <string name="highlight_copied_unedited_transactions">Highlight copied but unedited transaction</string>
    <string name="highlight_copied_unedited_transactions_summary">Highlight for a day or until app restart</string>
    <string name="colorize_weekend_date">Colorize weekend date/time</string>
    <string name="colorize_weekend_date_summary">Show dates of Saturday/Sunday in red</string>
    <string name="prevent_edit_cleared_reconciled">Prevent editing cleared/reconciled transactions</string>
    <string name="prevent_edit_cleared_reconciled_summary">You can still change their state to re-enable editing.</string>
    <string name="quick_menu_split_transactions">Split transactions quick-menu</string>
    <string name="quick_menu_split_transactions_summary">Shortcut for changing split transaction status</string>
    <string name="split_entity_in_child">Split transactions payee/location in child</string>
    <string name="split_entity_in_child_summary">Track payee/location in split child instead of split summary.
        Old transactions with payee/location will still show selector for edit.</string>
    <string name="auto_backup_enabled">Enable auto-backup</string>
    <string name="auto_backup_enabled_summary">Backup database daily at the specified time</string>
    <string name="auto_backup_time">Auto-backup time</string>
    <string name="auto_backup_time_summary" formatted="false">Do daily backup at %02d:%02d</string>
    <string name="database_backup">Database Backup</string>
    <string name="database_backup_folder">Backup Folder</string>
    <string name="database_backup_folder_summary">In use: %s
Any folder the picker offers will do, including one belonging to OneDrive, Nextcloud or another service - the backup is written there and that app syncs it. Google Drive and Dropbox are under Online backup instead, because there it is Cifra that uploads.</string>
    <string name="dropbox">Dropbox</string>
    <string name="dropbox_authorize">Authorize</string>
    <string name="dropbox_authorize_summary">Allow Cifra to upload files to your Dropbox</string>
    <string name="dropbox_unlink">Unlink</string>
    <string name="dropbox_unlink_summary">Prevent Cifra from uploading files to your Dropbox</string>
    <string name="dropbox_upload_backup">Upload Backups</string>
    <string name="dropbox_upload_backup_summary">Upload database backups to Dropbox</string>
    <string name="dropbox_upload_autobackup">Upload Auto-backups</string>
    <string name="dropbox_upload_autobackup_summary">Upload database auto-backups to Dropbox</string>
    <string name="dropbox_upload_pictures">Upload Pictures</string>
    <string name="dropbox_upload_pictures_summary">Upload attached pictures to Dropbox</string>
    <string name="dropbox_download_pictures">Download Pictures</string>
    <string name="dropbox_download_pictures_summary">Download attached pictures not found locally from Dropbox</string>
    <string name="category_selector">Category selector</string>
    <string name="show_recently_used_category">Show recently used categories</string>
    <string name="show_recently_used_category_summary">Show recently used categories from current account</string>
    <string name="hierarchical_category_selector_income_expense">Income/Expense</string>
    <string name="hierarchical_category_selector_income_expense_summary">Group income and expense categories together</string>
    <string name="show_go_to_today_button">Show Go To Today</string>
    <string name="show_go_to_today_button_summary">Show \'Go To Today\' button to scroll to transactions in today</string>
    <string name="accounts_list_screen">Accounts screen</string>
    <string name="accounts_list_screen_summary">Preferences for accounts list screen</string>
    <string name="blotter_screen">Ledger preferences</string>
    <string name="blotter_screen_summary">Preferences for blotter screen</string>
    <string name="startup_screen">Startup screen</string>
    <string name="startup_screen_summary">Select tab which will be selected on startup</string>
    <string name="enter_currency_decimal_places">Allow enter currency decimal places</string>
    <string name="enter_currency_decimal_places_summary">Allows you to enter decimals for some currencies (cents, etc.)</string>
    <string name="round_up_amount">Automatically up decimal places</string>
    <string name="round_up_amount_summary">Round up entered amount value with regarding to selected currency</string>
    <string name="exchange_rate_provider">Exchange Rate Provider</string>
    <string name="exchange_rate_provider_summary">Select provider to download exchange rates</string>
    <string name="openexchangerates_app_id_summary">Please register a free account on OpenExchangeRates and provide your App ID</string>
    <string name="google_drive_backup_account">Backup account</string>
    <string name="google_drive_backup_account_summary">Choose your Google Drive account</string>
    <string name="google_drive_sign_out">Sign out account</string>
    <string name="google_drive_sign_out_summary">Sign out to choose another account</string>
    <string name="google_drive_upload_backup">Upload Backups</string>
    <string name="google_drive_upload_backup_summary">Upload database backups to Google Drive</string>
    <string name="google_drive_upload_autobackup">Upload Auto-backups</string>
    <string name="google_drive_upload_autobackup_summary">Upload database auto-backups to Google Drive</string>
    <string name="google_drive_upload_pictures">Upload Pictures</string>
    <string name="google_drive_upload_pictures_summary">Upload attached pictures to Google Drive</string>
    <string name="google_drive_download_pictures">Download Pictures</string>
    <string name="google_drive_download_pictures_summary">Download attached pictures not found locally from Google Drive</string>
    <string name="pref_tpl_transaction_status_title">Transaction Status</string>
    <string name="pref_tpl_transaction_status">Status of transaction created from template: %s</string>
    <string name="pref_tpl_adding_to_note_title">Saving notification text</string>
    <string name="pref_tpl_adding_to_note">Add notification text to transaction note</string>
    <string name="pref_google_wallet_transaction_title">Create transactions</string>
    <string name="pref_google_wallet_transaction_summary">Requires notification access. Account matched by name, label or number having last 4 digits.</string>
    <string name="pref_google_wallet_transaction_status">Status of transaction created from Google Wallet notification: %s</string>
    <string name="auto_backup_reminder_enabled">Remind about autobackup</string>
    <string name="auto_backup_reminder_enabled_summary">Remind if autobackup has not been enabled for a few days.</string>
    <string name="auto_backup_warning_enabled">Notify about failures</string>
    <string name="auto_backup_warning_summary">Notify if autobackup failed during the last execution.</string>
    <string name="backup_newlines">Keep newlines in notes</string>
    <string name="backup_newlines_summary">Newlines will be escaped as `\\n`, backslashes will be escaped as `\\\\`. If not enabled, newlines will be replaced as space (as in old versions).</string>
    <string name="first_day_of_week">First day of week</string>
    <string name="first_day_of_week_summary">Change first day of the week used in reporting</string>
    <string name="fiscal_year_start">Fiscal year start</string>
    <string name="fiscal_year_start_summary">First day of fiscal year for period and reports: %s</string>
    <string name="show_summary_tab">Summary tab</string>
    <string name="show_summary_tab_summary">Show the month at a glance as the first tab</string>
    <string name="quick_entry_from_widget">Quick entry from the widget</string>
    <string name="quick_entry_from_widget_summary">The widget button opens the quick screen instead of the full form</string>
    <string name="pref_group_appearance">Appearance</string>
    <string name="pref_group_transactions">Transactions</string>
    <string name="pref_group_lists">Accounts</string>
    <string name="pref_group_notifications">From notifications</string>
    <string name="pref_group_periods">Periods and currencies</string>
    <string name="pref_group_widgets">Widget and shortcuts</string>
    <string name="quick_bar">Buttons in the notification shade</string>
    <string name="quick_bar_summary">A quiet notification carrying quick entry, transaction and transfer</string>
    <string name="swipe_right">Swipe right</string>
    <string name="swipe_left">Swipe left</string>
    <string name="weekend_date_color">Weekend colour</string>
</resources>