<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreferenceCompat
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        android:defaultValue="false"
        android:key="prevent_edit_cleared_reconciled"
        android:summary="@string/prevent_edit_cleared_reconciled_summary"
        android:title="@string/prevent_edit_cleared_reconciled" />
    <SwitchPreferenceCompat
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        android:defaultValue="true"
        android:key="quick_menu_split_transactions"
        android:summary="@string/quick_menu_split_transactions_summary"
        android:title="@string/quick_menu_split_transactions" />
    <SwitchPreferenceCompat
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        android:defaultValue="false"
        android:key="split_entity_in_child"
        android:summary="@string/split_entity_in_child_summary"
        android:title="@string/split_entity_in_child" />
    <PreferenceCategory android:layout="@layout/preference_category_bullet" android:title="@string/category_selector">
        <!-- todo.mb: remove it as not used really >> -->
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:singleLineTitle="false"
            android:defaultValue="true"
            android:key="show_recently_used_category"
            android:summary="@string/show_recently_used_category_summary"
            android:title="@string/show_recently_used_category" />
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:singleLineTitle="false"
            android:defaultValue="false"
            android:key="hierarchical_category_selector_income_expense"
            android:summary="@string/hierarchical_category_selector_income_expense_summary"
            android:title="@string/hierarchical_category_selector_income_expense" />
    </PreferenceCategory>
    <PreferenceCategory android:layout="@layout/preference_category_bullet" android:title="@string/screen_layout">
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:singleLineTitle="false"
            android:defaultValue="false"
            android:key="ntsl_show_account_balance_on_selector"
            android:title="@string/show_account_balance_on_selector"
            android:summary="@string/show_account_balance_on_selector_summary" />
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:singleLineTitle="false"
            android:defaultValue="true"
            android:key="ntsl_round_up_amount"
            android:summary="@string/round_up_amount_summary"
            android:title="@string/round_up_amount" />
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:singleLineTitle="false"
            android:defaultValue="true"
            android:key="ntsl_enter_currency_decimal_places"
            android:summary="@string/enter_currency_decimal_places_summary"
            android:title="@string/enter_currency_decimal_places" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>