<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--
      Dragging a movement sideways. Two settings rather than two fixed actions:
      see SwipeAction for why.
    -->
    <ListPreference
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        app:useSimpleSummaryProvider="true"
        android:defaultValue="CLEAR"
        android:key="swipe_right_action"
        android:entries="@array/swipe_action_entries"
        android:entryValues="@array/swipe_action_values"
        android:title="@string/swipe_right" />
    <ListPreference
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        app:useSimpleSummaryProvider="true"
        android:defaultValue="DELETE"
        android:key="swipe_left_action"
        android:entries="@array/swipe_action_entries"
        android:entryValues="@array/swipe_action_values"
        android:title="@string/swipe_left" />
    <SwitchPreferenceCompat
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        android:defaultValue="false"
        android:key="show_go_to_today_button"
        android:summary="@string/show_go_to_today_button_summary"
        android:title="@string/show_go_to_today_button" />
    <SwitchPreferenceCompat
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        android:defaultValue="false"
        android:key="highlight_copied_unedited_transactions"
        android:summary="@string/highlight_copied_unedited_transactions_summary"
        android:title="@string/highlight_copied_unedited_transactions" />
    <SwitchPreferenceCompat
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        android:defaultValue="true"
        android:key="colorize_weekend_date"
        android:summary="@string/colorize_weekend_date_summary"
        android:title="@string/colorize_weekend_date" />
    <ListPreference
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        app:useSimpleSummaryProvider="true"
        android:defaultValue="CC6666"
        android:dependency="colorize_weekend_date"
        android:key="weekend_date_color"
        android:entries="@array/weekend_colour_entries"
        android:entryValues="@array/weekend_colour_values"
        android:title="@string/weekend_date_color" />
</androidx.preference.PreferenceScreen>